<resources>
    <string name="app_name">KINGSHIP</string>
    <string name="brand">KINGSHIP</string>
    <string name="admin">Admin</string>
    <string name="seller">Seller</string>
    <string name="user">User</string>
    <string name="title_activity_login_admin">LoginActivityAdmin</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="AdminLogin">Login</string>
    <string name="AdminSign">Sign Up</string>
    <string name="AdminNameText">Enter Admin Username</string>
    <string name="AdminUserName" />
    <string name="adminPasswordText">Enter Password</string>
    <string name="AdminLoginButton">Admin Login</string>
    <string name="AdminPass" />
    <string name="AdminName1">Enter Admin Name</string>
    <string name="adminEmail">Enter E-mail</string>
    <string name="EnterAdminName" />
    <string name="EnteradminEmail" />
    <string name="adminPasswo" />
    <string name="adminPasswor">Enter Password</string>
    <string name="ConfirmPass">Confirm Password</string>
    <string name="ConfiradminPasswo" />
    <string name="AdminPhone">Contact Number</string>
    <string name="AdminSignUp">Signup</string>
    <string name="tv_Sign">SignUp</string>
    <string name="tv_uname">Username</string>
    <string name="te_uname" />
    <string name="tv_email">Email</string>
    <string name="te_email" />
    <string name="te_pwd">Password</string>
    <string name="te_pwrd" />
    <string name="tv_Cpwrd">Confirm Password</string>
    <string name="te_Cpwrd" />
    <string name="btn_cSign">SignUp</string>
    <string name="btn_uSignup">SignUp</string>
    <string name="btn_uSignin">SignIn</string>
    <string name="tv_Signin">SignIn</string>
    <string name="tv_Uname">Username</string>
    <string name="te_Uname" />
    <string name="tv_Spwrd">Password</string>
    <string name="te_Spwrd" />
    <string name="btn_SignIn">SignIn</string>
    <string name="tv_pUname">Username</string>
    <string name="te_pUname" />
    <string name="tv_pEmail">Email</string>
    <string name="te_pEmail" />
    <string name="tv_pPwd">Password</string>
    <string name="te_pPwd" />
    <string name="btn_pUpdate">Update</string>
    <string name="btn_pDelete">Delete</string>
    <string name="id_sellerloginpage">Seller Login</string>
    <string name="id_sellersignuppage">Seller Sign Up</string>
    <string name="id_sellerusername">Seller Username</string>
    <string name="id_selleremail">E-mail</string>
    <string name="id_passwordone">Enter Password</string>
    <string name="id_passwordtwo">Enter Password again</string>
    <string name="id_contactnum">Contact Number</string>
    <string name="id_sellerusernameent" />
    <string name="id_selleremailent" />
    <string name="id_sellerpasswordoneent" />
    <string name="id_sellerpasswordtwoent" />
    <string name="id_sellercontactnument" />
    <string name="id_sellerinfosubmit">Submit</string>
    <string name="id_sellerusernamesub">Seller Username</string>
    <string name="id_sellerpasswordsub">Password</string>
    <string name="id_sellerusernameenter" />
    <string name="id_sellerpasswordenter" />
    <string name="id_sellersigninenter">Sign In</string>
    <string name="AllAdmins">All Admins</string>
    <string name="AdmUserName">Administraor Username</string>
    <string name="admEmail">Administrator Email</string>
    <string name="AdminUSERNAME" />
    <string name="adminEMAIL" />
    <string name="DeleteAdmin">DELETE</string>
    <string name="UpdateAdmin">UPDATE</string>
    <string name="id_sellerviewbtn">All Sellers</string>
    <string name="id_selleruser">Seller Username</string>
    <string name="id_sellerUser" />
    <string name="id_sellerem">Seller Email</string>
    <string name="id_sellerEmail">Seller Email</string>
    <string name="id_sellupdate">Update</string>
    <string name="id_selldelete">Delete</string>
    <string name="id_selpass">Password</string>
    <string name="id_sellpassview" />
    <string name="id_sellcont">Contact</string>
    <string name="id_sellcontview" />
    <string name="id_sellervigewbtn">All Sellers</string>
    <string name="id_sellferuser">Seller Username</string>
    <string name="id_sellferUser" />
    <string name="id_sellderem">Seller Email</string>
    <string name="id_sellderEmail">Seller Email</string>
    <string name="id_sellfupdate">Update</string>
    <string name="id_seldfldelete">Delete</string>
    <string name="id_selpfass">Password</string>
    <string name="id_sellpgassview" />
    <string name="id_sellgcont">Contact</string>
    <string name="id_sellcgontview" />
</resources>