<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cusSignup">

    <TextView
        android:id="@+id/tv_Sign"
        android:layout_width="132dp"
        android:layout_height="43dp"
        android:layout_marginTop="28dp"
        android:text="@string/tv_Sign"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_uname"
        android:layout_width="136dp"
        android:layout_height="33dp"
        android:layout_marginTop="28dp"
        android:text="@string/tv_uname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Sign" />

    <EditText
        android:id="@+id/te_uname"
        android:layout_width="327dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="52dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/te_uname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_uname"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="146dp"
        android:layout_height="39dp"
        android:layout_marginTop="8dp"
        android:text="@string/tv_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/te_uname" />

    <EditText
        android:id="@+id/te_email"
        android:layout_width="318dp"
        android:layout_height="49dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="@string/te_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.322"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_email"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tv_pwd"
        android:layout_width="150dp"
        android:layout_height="33dp"
        android:layout_marginTop="12dp"
        android:text="@string/te_pwd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/te_email" />

    <EditText
        android:id="@+id/te_pwrd"
        android:layout_width="331dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="@string/te_pwrd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.312"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pwd"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tv_Cpwrd"
        android:layout_width="145dp"
        android:layout_height="34dp"
        android:layout_marginTop="24dp"
        android:text="@string/tv_Cpwrd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/te_pwrd" />

    <EditText
        android:id="@+id/te_Cpwrd"
        android:layout_width="329dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="@string/te_Cpwrd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.231"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Cpwrd"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btn_cSign"
        android:layout_width="128dp"
        android:layout_height="53dp"
        android:layout_marginTop="56dp"
        android:text="@string/btn_cSign"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/te_Cpwrd" />
</androidx.constraintlayout.widget.ConstraintLayout>

