<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cusSignin">

    <TextView
        android:id="@+id/tv_Signin"
        android:layout_width="139dp"
        android:layout_height="36dp"
        android:layout_marginTop="52dp"
        android:text="@string/tv_Signin"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_Uname"
        android:layout_width="128dp"
        android:layout_height="39dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="256dp"
        android:text="@string/tv_Uname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Signin" />

    <EditText
        android:id="@+id/te_Uname"
        android:layout_width="354dp"
        android:layout_height="55dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/te_Uname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Uname"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tv_Spwrd"
        android:layout_width="136dp"
        android:layout_height="44dp"
        android:layout_marginTop="28dp"
        android:text="@string/tv_Spwrd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/te_Uname" />

    <EditText
        android:id="@+id/te_Spwrd"
        android:layout_width="358dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="@string/te_Spwrd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Spwrd"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btn_SignIn"
        android:layout_width="207dp"
        android:layout_height="52dp"
        android:layout_marginTop="64dp"
        android:text="@string/btn_SignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/te_Spwrd" />
</androidx.constraintlayout.widget.ConstraintLayout>